--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <div class="container">
             <div class="header-title">
-            <h1></h1>
-            <p></p>
+            <h1>Titolo 1</h1>
+            <p>Sottotitolo</p>
             </div>
             <div class="header-buttons">
             Tastini    
@@ -23,47 +23,58 @@
 
     <main>
         <div class="container">
-            <div class="card">
-                <h2></h2>
-                <p><span>Price</span></p>
-                <p><span>Discount</span></p>
-                <a href="#">Choose Plan</a>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </div>
-            <div class="card">
-                <h2></h2>
-                <p><span>Price</span></p>
-                <p><span>Discount</span></p>
-                <a href="#">Choose Plan</a>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </div>
-            <div class="card">
-                <h2></h2>
-                <p><span>Price</span></p>
-                <p><span>Discount</span></p>
-                <a href="#">Choose Plan</a>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+            <div class="card-group">
+                <div class="card">
+                    <div class="card-top">
+                    <h2>Plan name</h2>
+                    <p>Plan description</p>
+                    </div>
+                    <p><span>Price</span></p>
+                    <p><span>Discount</span></p>
+                    <a href="#">Choose Plan</a>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                 <div class="card">
+                    <div class="card-top">
+                    <h2>Plan name</h2>
+                    <p>Plan description</p>
+                    </div>
+                    <p><span>Price</span></p>
+                    <p><span>Discount</span></p>
+                    <a href="#">Choose Plan</a>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                 <div class="card">
+                    <div class="card-top">
+                    <h2>Plan name</h2>
+                    <p>Plan description</p>
+                    </div>
+                    <p><span>Price</span></p>
+                    <p><span>Discount</span></p>
+                    <a href="#">Choose Plan</a>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </main>
