Add basic style

--- a/index.html
+++ b/index.html
@@ -24,56 +24,62 @@
     <main>
         <div class="container">
             <div class="card-group">
-                <div class="card">
+                       <div class="card">
                     <div class="card-top">
                     <h2>Plan name</h2>
                     <p>Plan description</p>
                     </div>
-                    <p><span>Price</span></p>
-                    <p><span>Discount</span></p>
+                    <div class="card-main-content">
+                    <p><span>Price</span>/month</p>
+                    <p>Yearly<span>Discount</span></p>
                     <a href="#">Choose Plan</a>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
                     </ul>
+                    </div>
                 </div>
                  <div class="card">
                     <div class="card-top">
                     <h2>Plan name</h2>
                     <p>Plan description</p>
                     </div>
+                    <div class="card-main-content">
                     <p><span>Price</span></p>
                     <p><span>Discount</span></p>
                     <a href="#">Choose Plan</a>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
                     </ul>
+                    </div>
                 </div>
-                 <div class="card">
+                        <div class="card">
                     <div class="card-top">
                     <h2>Plan name</h2>
                     <p>Plan description</p>
                     </div>
+                    <div class="card-main-content">
                     <p><span>Price</span></p>
                     <p><span>Discount</span></p>
                     <a href="#">Choose Plan</a>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
+                        <li>Item</li>
                     </ul>
+                    </div>
                 </div>
             </div>
         </div>
