--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap Icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <!-- Project CSS-->
     <link rel="stylesheet" href="./css/style.css">
     <title>Choose your plan!</title>
 </head>
@@ -12,8 +15,8 @@
     <header>
         <div class="container">
             <div class="header-title">
-            <h1>Titolo 1</h1>
-            <p>Sottotitolo</p>
+            <h1>Our Pricing Plan</h1>
+            <p>We are an industry-leading company that values honesty, integrity and efficiency, building quality products.</p>
             </div>
             <div class="header-buttons">
             Tastini    
@@ -26,58 +29,58 @@
             <div class="card-group">
                        <div class="card">
                     <div class="card-top">
-                    <h2>Plan name</h2>
-                    <p>Plan description</p>
+                    <h2>Basic</h2>
+                    <p>Most popular</p>
                     </div>
                     <div class="card-main-content">
-                    <p><span>Price</span>/month</p>
-                    <p>Yearly<span>Discount</span></p>
+                    <p><span>2.45</span> /month</p>
+                    <p>Yearly <span>15% Off</span></p>
                     <a href="#">Choose Plan</a>
                     <ul>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
+                        <li><i class="bi bi-check-lg"></i> Unlimited Projects</li>
+                        <li><i class="bi bi-check-lg"></i> Custom Permissions</li>
+                        <li><i class="bi bi-check-lg"></i> Custom Infrastructure</li>
+                        <li><i class="bi bi-x-lg"></i> Custom Design & Featuers</li>
+                        <li><i class="bi bi-x-lg"></i> Ulimited updates</li>
+                        <li><i class="bi bi-x-lg"></i> Unlimited Infrastructure</li>
                     </ul>
                     </div>
                 </div>
                  <div class="card">
                     <div class="card-top">
-                    <h2>Plan name</h2>
-                    <p>Plan description</p>
+                    <h2>Professional</h2>
+                    <p>Recommended</p>
                     </div>
                     <div class="card-main-content">
-                    <p><span>Price</span></p>
-                    <p><span>Discount</span></p>
+                    <p><span>4.45</span> /month</p>
+                    <p>Yearly <span>15% Off</span></p>
                     <a href="#">Choose Plan</a>
                     <ul>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
+                       <li><i class="bi bi-check-lg"></i> Unlimited Projects</li>
+                        <li><i class="bi bi-check-lg"></i> Custom Permissions</li>
+                        <li><i class="bi bi-check-lg"></i> Custom Infrastructure</li>
+                        <li><i class="bi bi-check-lg"></i> Custom Design & Featuers</li>
+                        <li><i class="bi bi-x-lg"></i> Ulimited updates</li>
+                        <li><i class="bi bi-x-lg"></i> Unlimited Infrastructure</li>
                     </ul>
                     </div>
                 </div>
                         <div class="card">
                     <div class="card-top">
-                    <h2>Plan name</h2>
-                    <p>Plan description</p>
+                    <h2>Ultimate</h2>
+                    <p>Best value</p>
                     </div>
                     <div class="card-main-content">
-                    <p><span>Price</span></p>
-                    <p><span>Discount</span></p>
+                    <p><span>12.45</span> /month</p>
+                    <p>Yearly <span>15% Off</span></p>
                     <a href="#">Choose Plan</a>
                     <ul>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
-                        <li>Item</li>
+                       <li><i class="bi bi-check-lg"></i> Unlimited Projects</li>
+                        <li><i class="bi bi-check-lg"></i> Custom Permissions</li>
+                        <li><i class="bi bi-check-lg"></i> Custom Infrastructure</li>
+                        <li><i class="bi bi-check-lg"></i> Custom Design & Featuers</li>
+                        <li><i class="bi bi-check-lg"></i> Ulimited updates</li>
+                        <li><i class="bi bi-check-lg"></i> Unlimited Infrastructure</li>
                     </ul>
                     </div>
                 </div>
