Add toggle switch icons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <p>We are an industry-leading company that values honesty, integrity and efficiency, building quality products.</p>
             </div>
             <div class="header-buttons">
-            Tastini    
+                <span>Monthly <i class="bi bi-toggle-on"></i></span>
+                <span>Yearly <i class="bi bi-toggle-off"></i></span>  
             </div>
         </div>
     </header>
