Optimize margins and typo errors

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li><i class="bi bi-check-lg"></i> Custom Permissions</li>
                         <li><i class="bi bi-check-lg"></i> Custom Infrastructure</li>
                         <li><i class="bi bi-x-lg"></i> Custom Design & Featuers</li>
-                        <li><i class="bi bi-x-lg"></i> Ulimited updates</li>
+                        <li><i class="bi bi-x-lg"></i> Unlimited updates</li>
                         <li><i class="bi bi-x-lg"></i> Unlimited Infrastructure</li>
                     </ul>
                     </div>
@@ -61,7 +61,7 @@
                         <li><i class="bi bi-check-lg"></i> Custom Permissions</li>
                         <li><i class="bi bi-check-lg"></i> Custom Infrastructure</li>
                         <li><i class="bi bi-check-lg"></i> Custom Design & Featuers</li>
-                        <li><i class="bi bi-x-lg"></i> Ulimited updates</li>
+                        <li><i class="bi bi-x-lg"></i> Unlimited updates</li>
                         <li><i class="bi bi-x-lg"></i> Unlimited Infrastructure</li>
                     </ul>
                     </div>
@@ -80,7 +80,7 @@
                         <li><i class="bi bi-check-lg"></i> Custom Permissions</li>
                         <li><i class="bi bi-check-lg"></i> Custom Infrastructure</li>
                         <li><i class="bi bi-check-lg"></i> Custom Design & Featuers</li>
-                        <li><i class="bi bi-check-lg"></i> Ulimited updates</li>
+                        <li><i class="bi bi-check-lg"></i> Unlimited updates</li>
                         <li><i class="bi bi-check-lg"></i> Unlimited Infrastructure</li>
                     </ul>
                     </div>
